--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1 id="score">Score: 0</h1>
   <canvas id="gameCanvas" width="300" height="300"></canvas>
 
   <script src="main.js"></script>
